--- a/OpenGLEngine/OpenGLEngine.vcxproj
+++ b/OpenGLEngine/OpenGLEngine.vcxproj
@@ -164,7 +164,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\dependencies\aie\Gizmos.cpp" />
+    <ClCompile Include="..\dependencies\aie\OBJMesh.cpp" />
     <ClCompile Include="..\dependencies\aie\Shader.cpp" />
+    <ClCompile Include="..\dependencies\aie\Texture.cpp" />
     <ClCompile Include="..\dependencies\glcore\gl_core_4_4.c" />
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Camera.cpp" />
