--- a/OpenGLEngine/OpenGLEngine.vcxproj
+++ b/OpenGLEngine/OpenGLEngine.vcxproj
@@ -165,6 +165,7 @@
   <ItemGroup>
     <ClCompile Include="..\dependencies\aie\Gizmos.cpp" />
     <ClCompile Include="..\dependencies\aie\OBJMesh.cpp" />
+    <ClCompile Include="..\dependencies\aie\RenderTarget.cpp" />
     <ClCompile Include="..\dependencies\aie\Shader.cpp" />
     <ClCompile Include="..\dependencies\aie\Texture.cpp" />
     <ClCompile Include="..\dependencies\glcore\gl_core_4_4.c" />
