--- a/Project3D/Project3D.vcxproj
+++ b/Project3D/Project3D.vcxproj
@@ -150,6 +150,10 @@
     <ClInclude Include="Application3D.h" />
     <ClInclude Include="GameObject.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\bin\shaders\phong.frag" />
+    <None Include="..\bin\shaders\phong.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
