--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@ bin/stanford/soulspear_diffuse.tga
 bin/stanford/soulspear.obj
 bin/stanford/soulspear_specular.tga
 bin/stanford/soulspear_normal.tga
+Project3D/Release/Project3D.tlog/CL.read.1.tlog
+Project3D/Release/Project3D.tlog/CL.command.1.tlog
+Project3D/Release/Project3D.tlog/Project3D.write.1u.tlog
+Project3D/Release/Project3D.tlog/Project3D.lastbuildstate
+Project3D/Release/Project3D.tlog/CL.write.1.tlog
+Project3D/Release/Project3D.tlog/link.read.1.tlog
+Project3D/Release/Project3D.tlog/link.command.1.tlog
+Project3D/Release/Project3D.tlog/link.write.1.tlog
