--- a/bin/imgui.ini
+++ b/bin/imgui.ini
@@ -8,3 +8,13 @@ Pos=62,60
 Size=92,48
 Collapsed=0
 
+[Settings]
+Pos=5,106
+Size=483,498
+Collapsed=1
+
+[Controls]
+Pos=3,3
+Size=148,99
+Collapsed=0
+
